--- a/BlackWireClient/build.gradle
+++ b/BlackWireClient/build.gradle
@@ -1,5 +1,11 @@
 plugins {
     id 'java'
+    id 'application'
+    id "com.github.johnrengelman.shadow" version "6.1.0"
+}
+
+shadow {
+    mainClassName = "me.mrfunny.anonymousmessenger.client.Main"
 }
 
 group 'org.example'
@@ -9,6 +15,12 @@ repositories {
     mavenCentral()
 }
 
+dependencies {
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
+    compile group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
+}
+
 jar {
     manifest {
         attributes(
@@ -16,12 +28,6 @@ jar {
                 'Main-Class': 'me.mrfunny.anonymousmessenger.client.Main'
         )
     }
-}
-
-dependencies {
-    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
-    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
-    implementation group: 'com.googlecode.json-simple', name: 'json-simple', version: '1.1.1'
 }
 
 test {
