Implemented AES encryption to prevent bruteforcing
Algorithm:
	Generate secret key with random uuid and alphanumeric random
	Encrypt message with this secret key via AES
	Encrypt secret key with receiver's public key
	On client side decrypt key via private key and decrypt message

--- a/BlackWireServer/build.gradle
+++ b/BlackWireServer/build.gradle
@@ -1,5 +1,7 @@
 plugins {
     id 'java'
+    id 'application'
+    id "com.github.johnrengelman.shadow" version "6.1.0"
 }
 
 group 'me.mrfunny.blackwire.server'
@@ -7,6 +9,10 @@ version '1.0'
 
 repositories {
     mavenCentral()
+}
+
+shadow {
+    mainClassName = "me.mrfunny.blackwire.server.Main"
 }
 
 dependencies {
