--- a/blackwire_server/package.json
+++ b/blackwire_server/package.json
@@ -2,7 +2,7 @@
   "name": "blackwire_server",
   "version": "1.0.0",
   "description": "An server implementation for BlackWire messenger",
-  "main": "main.ts",
+  "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -17,6 +17,19 @@
   "license": "GPL-3.0",
   "dependencies": {
     "cryptico": "^1.0.2",
+    "express": "^4.16.4",
+    "typescript-collections": "^1.3.3",
     "ws": "^7.5.0"
+  },
+  "devDependencies": {
+    "@types/express": "^4.16.1",
+    "tslint": "^5.12.1",
+    "typescript": "^3.3.3"
+  },
+  "pkg": {
+    "scripts": "build/**/*.js",
+    "assets": "views/**/*",
+    "targets": [ "node14-linux-arm64" ],
+    "outputPath": "dist"
   }
 }
